Fix weird ass spacing in code block

--- a/_sass/git-wiki-style.scss
+++ b/_sass/git-wiki-style.scss
@@ -107,6 +107,7 @@ code {
 pre code {
   background-color: #0b0e15;
   color: #d8d8d8;
+  padding: initial;
 }
 
 table {
